# AWSFinOpsAgent

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  SPEC_DEVOPS.md  conftest.py  docker-compose.mcp.yml  docker-compose.observability.yml  docker-compose.sandbox.yml  docker-compose.yml  pyproject.toml
.cursor/: mcp.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
apps/: __init__.py
apps/api/: __init__.py  main.py
apps/dashboard/: __init__.py  app.py  data.py  devops_page.py  resource_select.py
config/: finops.yaml  models.yaml
devops_core/: __init__.py  cli.py
devops_core/agents/: __init__.py  estate.py
devops_core/diagnose/: __init__.py  correlate.py  engine.py  schemas.py  signals.py
devops_core/diagram/: __init__.py  aws_shapes.py  builder.py  drawio.py  registry.py  render.py  svg.py  topology_drawio.py
devops_core/discovery/: details.py  (+7 more)
docs/: DEVOPS_IAM.md  GUARDRAILS.md  IAM.md  IDE_INTEGRATION.md  MEMORY.md  OBSERVABILITY.md  SKILLS.md  architecture-c4.drawio  architecture.drawio
finops_core/: __init__.py  accuracy.py  agent_context.py  cli.py  config.py  conversation.py  format.py  hooks.py  modes.py  observe.py  preflight.py  pricing.py  router.py  telemetry.py
iam/: devops-readonly-policy.json  finops-guarded-write-policy.json  finops-readonly-policy.json
observability/: otel-collector-config.yaml  prometheus.yml
scripts/: create_finops_guardrail.sh  setup_devops_iam.sh  setup_devops_role.sh  setup_finops_iam.sh
tests/: conftest.py
(+131 files in other folders)
